9.3.7/da_data_analysis_and_exporting_data.md
# Working with application data {#danaanalysisandexportingdata .concept}

You can add labels to data elements in your application that become the label in the export file.

After capturing data from users, you can label data elements to help analyze the data when it is exported to a spreadsheet, or database. You can also set which data points other users see with security rules. For example, you can restrict managers from seeing the time sheets of employees who are not on their team. Or, you can choose to hide all forms that are in an end state and do not need attention. You can also export tables. In the spreadsheet, Leap creates one row for each header and one row for each table.

With these topics, learn how to label data, how to export data, and how labels affect the exported data.

-   **[Changing the saved value of a form item](da_labeling_saved_values_in_forms.md)**  
You can add “Saved Value” labels for any form items that have a constant value so they reflect different data during export.
-   **[Adding data labels to form items](da_labeling_fields_in_a_form.md)**  
Data labels added to form items provide descriptive column names when data is exported to a spreadsheet. If no data label is assigned, the Display Value is used.
-   **[Exporting data from your application](da_exporting_data_from_your_application.md)**  
After users complete and submit forms, you can export the data to a spreadsheet.

- **[Importing data in View Data](cr_import_data_in_view_responses.md)**  

Application Owners can use an Import Data operation on the **View Data** page to import spreadsheet data into their application. This can provide a quick start method for adding many records/rows of data into an application from an existing spreadsheet.

**Parent topic:** [Building Apps](cr_creating_and_managing_toc.md)

